--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
     font-family: 'Inter', sans-serif;
 }
 
+.a:visited {
+    
+}
+
 .footer {
     background-color: #FFCE87;
     padding: 0px 10px 20px 10px;
